# rules_idb

./: .bazelrc  .gitignore  HANDOFF.md  MODULE.bazel  README.md  RELEASING.md
.bcr/: config.yml  metadata.template.json
.github/workflows/: build-idb-dist.yml  ci.yml  publish.yml  release.yml
benchmark/: RESULTS.md  phases.py  run_benchmark.sh  sampler.py  summarize.py
docs/: BUILDING_IDB.md
examples/: BUILD.bazel
examples/HostApp/: AppDelegate.swift  BigInfo.plist  Info.plist
examples/Tests/: FailingSwiftTestingTests.swift  FailingTests.swift  HostedTests.swift  LogicTests.swift  SkippingTests.swift  SwiftTestingTests.swift  UITests.swift
examples/hooks/: custom_simulator_cleanup.sh  custom_simulator_creator.sh  failing_post_action.sh  flock_simulator_cleanup.sh  flock_simulator_creator.sh  post_action.sh  pre_action.sh
idb/: BUILD.bazel  extensions.bzl  idb_test_runner.bzl  idb_test_runner.template.sh
patches/: idb-build-fixes.patch
tests/: validate.sh
tools/: BUILD.bazel  clean_simulators.sh  preboot_simulators.sh
