load("@rules_apple//apple:ios.bzl", "ios_application", "ios_ui_test", "ios_unit_test")
load("@rules_apple//apple/testing/default_runner:ios_xctestrun_runner.bzl", "ios_xctestrun_runner")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_swift//swift:swift.bzl", "swift_library")
load("@rules_idb//idb:idb_test_runner.bzl", "ios_idb_test_runner")

MINIMUM_OS_VERSION = "16.0"

swift_library(
    name = "HostAppLib",
    srcs = ["HostApp/AppDelegate.swift"],
    module_name = "HostApp",
)

ios_application(
    name = "HostApp",
    bundle_id = "com.rulesidb.example.HostApp",
    families = ["iphone"],
    infoplists = ["HostApp/Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    deps = [":HostAppLib"],
)

swift_library(
    name = "HostedTestsLib",
    testonly = True,
    srcs = ["Tests/HostedTests.swift"],
    module_name = "HostedTests",
)

ios_idb_test_runner(
    name = "idb_runner",
    device_type = "iPhone 17 Pro",
)

# Runs with the idb-based runner from this repository.
ios_unit_test(
    name = "HostedTests",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)

# The same tests with the stock rules_apple xcodebuild-based runner, for
# benchmarking against.
ios_unit_test(
    name = "HostedTests_xcodebuild",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)

swift_library(
    name = "FailingTestsLib",
    testonly = True,
    srcs = ["Tests/FailingTests.swift"],
    module_name = "FailingTests",
)

# Intentionally failing; used to validate the runner's failure detection.
ios_unit_test(
    name = "FailingTests",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":FailingTestsLib"],
)

swift_library(
    name = "LogicTestsLib",
    testonly = True,
    srcs = ["Tests/LogicTests.swift"],
    module_name = "LogicTests",
)

# Hostless (logic) tests run through `idb xctest run logic`.
ios_unit_test(
    name = "LogicTests",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    deps = [":LogicTestsLib"],
)

# Sharded copies used to demonstrate/benchmark concurrent simulator usage via
# --local_test_jobs=N. Each target is an independent test action, so Bazel can
# run them in parallel; the idb runner hands each one its own pooled simulator.
[
    ios_unit_test(
        name = "HostedTestsShard%d" % i,
        size = "medium",
        minimum_os_version = MINIMUM_OS_VERSION,
        runner = ":idb_runner",
        test_host = ":HostApp",
        deps = [":HostedTestsLib"],
    )
    for i in range(1, 9)
]

[
    ios_unit_test(
        name = "HostedTestsShard%d_xcodebuild" % i,
        size = "medium",
        minimum_os_version = MINIMUM_OS_VERSION,
        runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
        test_host = ":HostApp",
        deps = [":HostedTestsLib"],
    )
    for i in range(1, 9)
]

# XCTSkip handling: skipped tests must not fail or miscount the run.
swift_library(
    name = "SkippingTestsLib",
    testonly = True,
    srcs = ["Tests/SkippingTests.swift"],
    module_name = "SkippingTests",
    tags = ["manual"],
)

ios_unit_test(
    name = "SkippingTests",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":SkippingTestsLib"],
)

# Swift Testing (@Test) coverage, on both runners for comparison.
swift_library(
    name = "SwiftTestingTestsLib",
    testonly = True,
    srcs = ["Tests/SwiftTestingTests.swift"],
    module_name = "SwiftTestingTests",
    tags = ["manual"],
)

ios_unit_test(
    name = "SwiftTestingTests",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":SwiftTestingTestsLib"],
)

ios_unit_test(
    name = "SwiftTestingTests_xcodebuild",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":SwiftTestingTestsLib"],
)

swift_library(
    name = "FailingSwiftTestingTestsLib",
    testonly = True,
    srcs = ["Tests/FailingSwiftTestingTests.swift"],
    module_name = "FailingSwiftTestingTests",
    tags = ["manual"],
)

ios_unit_test(
    name = "FailingSwiftTestingTests",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":FailingSwiftTestingTestsLib"],
)

# Sharding a swift-testing bundle must be rejected (tests can't be
# enumerated for partitioning); used by the runner's own validation.
ios_unit_test(
    name = "SwiftTestingTestsSharded",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    shard_count = 2,
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":SwiftTestingTestsLib"],
)

# Bazel test sharding: the runner partitions the bundle's tests per shard.
ios_unit_test(
    name = "HostedTestsSharded",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    shard_count = 3,
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)

# The stock xcodebuild runner with a hand-rolled pooled simulator_creator
# (PID lockfiles + stale-lock stealing) — what teams write today to make
# --local_test_jobs work. Used by the benchmark as the apples-to-apples
# concurrency comparison against rules_idb's built-in pool.
sh_binary(
    name = "flock_simulator_creator",
    srcs = ["hooks/flock_simulator_creator.sh"],
)

sh_binary(
    name = "flock_simulator_cleanup",
    srcs = ["hooks/flock_simulator_cleanup.sh"],
)

ios_xctestrun_runner(
    name = "xcodebuild_pooled_runner",
    clean_up_simulator_action = ":flock_simulator_cleanup",
    create_simulator_action = ":flock_simulator_creator",
    device_type = "iPhone 17 Pro",
)

[
    ios_unit_test(
        name = "HostedTestsShard%d_xcb_pooled" % i,
        size = "medium",
        minimum_os_version = MINIMUM_OS_VERSION,
        runner = ":xcodebuild_pooled_runner",
        tags = ["manual"],
        test_host = ":HostApp",
        deps = [":HostedTestsLib"],
    )
    for i in range(1, 9)
]

# A test host inflated with a 400 MB opaque resource, used by the benchmark
# harness to measure staging/install wall time at a realistic app size.
# Random bytes defeat compression, so archive staging pays full price.
# Tagged manual: benchmark-only, too heavy for CI.
genrule(
    name = "big_asset",
    outs = ["big_asset.bin"],
    cmd = "dd if=/dev/urandom of=$@ bs=1m count=400 2>/dev/null",
    tags = ["manual"],
)

swift_library(
    name = "BigHostAppLib",
    srcs = ["HostApp/AppDelegate.swift"],
    data = [":big_asset"],
    module_name = "BigHostApp",
    tags = ["manual"],
)

ios_application(
    name = "BigHostApp",
    bundle_id = "com.rulesidb.example.BigHostApp",
    families = ["iphone"],
    infoplists = ["HostApp/BigInfo.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    deps = [":BigHostAppLib"],
)

ios_unit_test(
    name = "HostedTestsBig",
    size = "large",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    tags = ["manual"],
    test_host = ":BigHostApp",
    deps = [":HostedTestsLib"],
)

ios_unit_test(
    name = "HostedTestsBig_xcodebuild",
    size = "large",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    tags = ["manual"],
    test_host = ":BigHostApp",
    deps = [":HostedTestsLib"],
)

# --- Feature demonstration targets -----------------------------------------

swift_library(
    name = "UITestsLib",
    testonly = True,
    srcs = ["Tests/UITests.swift"],
    module_name = "UITests",
)

# UI tests run through `idb xctest run ui` with an XCTRunner host the runner
# assembles from Xcode's agent template.
ios_ui_test(
    name = "UITests",
    size = "large",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_runner",
    test_host = ":HostApp",
    deps = [":UITestsLib"],
)

# Random test ordering (XCTestConfiguration.testExecutionOrdering).
ios_idb_test_runner(
    name = "idb_random_runner",
    device_type = "iPhone 17 Pro",
    random = True,
)

ios_unit_test(
    name = "HostedTestsRandom",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_random_runner",
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)

# pre_action / post_action hooks.
sh_binary(
    name = "pre_action",
    srcs = ["hooks/pre_action.sh"],
)

sh_binary(
    name = "post_action",
    srcs = ["hooks/post_action.sh"],
)

ios_idb_test_runner(
    name = "idb_hooks_runner",
    device_type = "iPhone 17 Pro",
    post_action = ":post_action",
    pre_action = ":pre_action",
)

ios_unit_test(
    name = "HostedTestsHooks",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_hooks_runner",
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)

# Custom simulator provisioning (rules_apple ios_xctestrun_runner contract),
# replacing the built-in pool.
sh_binary(
    name = "custom_simulator_creator",
    srcs = ["hooks/custom_simulator_creator.sh"],
)

sh_binary(
    name = "custom_simulator_cleanup",
    srcs = ["hooks/custom_simulator_cleanup.sh"],
)

ios_idb_test_runner(
    name = "idb_custom_sim_runner",
    clean_up_simulator_action = ":custom_simulator_cleanup",
    create_simulator_action = ":custom_simulator_creator",
    device_type = "iPhone 17 Pro",
)

ios_unit_test(
    name = "HostedTestsCustomSim",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_custom_sim_runner",
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)

# post_action_determines_exit_code: the post action fails (exit 7) even
# though the tests pass, so the target must FAIL. Tagged manual; used by the
# runner's own validation.
sh_binary(
    name = "failing_post_action",
    srcs = ["hooks/failing_post_action.sh"],
)

ios_idb_test_runner(
    name = "idb_post_gate_runner",
    device_type = "iPhone 17 Pro",
    post_action = ":failing_post_action",
    post_action_determines_exit_code = True,
)

ios_unit_test(
    name = "HostedTestsPostGate",
    size = "medium",
    minimum_os_version = MINIMUM_OS_VERSION,
    runner = ":idb_post_gate_runner",
    tags = ["manual"],
    test_host = ":HostApp",
    deps = [":HostedTestsLib"],
)
