load(":idb_test_runner.bzl", "ios_idb_test_runner")

package(default_visibility = ["//visibility:public"])

# The interpreter that runs the vendored idb client. Tests always execute
# on macOS (the runner requires darwin), so select the darwin interpreter
# for the execution platform's CPU — @python_3_12_host would be the
# platform of the machine that ran the repository rules, which is wrong
# under remote execution with a non-mac driver.
alias(
    name = "client_python",
    actual = select({
        "@platforms//cpu:arm64": "@python_3_12_aarch64-apple-darwin//:python",
        "@platforms//cpu:x86_64": "@python_3_12_x86_64-apple-darwin//:python",
    }),
)

# The full runtime tree; declared as test runfiles so remote executors
# materialize the stdlib, not just the interpreter binary.
alias(
    name = "client_python_files",
    actual = select({
        "@platforms//cpu:arm64": "@python_3_12_aarch64-apple-darwin//:files",
        "@platforms//cpu:x86_64": "@python_3_12_x86_64-apple-darwin//:files",
    }),
)

exports_files([
    "idb_test_runner.template.sh",
])

# A ready-to-use runner: newest available iPhone device type and iOS runtime,
# unbounded warm simulator pool.
ios_idb_test_runner(
    name = "default_runner",
)
